--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -37,7 +37,7 @@
 
     <form method="post">
 
-        <table>
+        <table class="task-table">
             <tr>
                 <td>Nuværende saldo:</td>
                 <td th:text="${session.currentUser.amount}"></td>
