--- a/src/main/resources/templates/createuser.html
+++ b/src/main/resources/templates/createuser.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<p>Please log in:</p>
+<h2>Please log in:</h2>
 <form method="post">
 
     <input type="text" name="mail" placeholder="Enter your mail">
