--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,15 +15,14 @@
 </div>
 <ul>
     <li><a href="index.html" th:href="@{/}">Hjem</a></li>
-    <li>
-        <a th:href="${session.currentUser != null} ? @{/order} : @{/login}">Bestil her</a>
+
+    <li th:action="${session.currentUser != null} ? '/order' : '/login'" method="GET">
+        <a href="order.html" th:href="@{/order}">Bestil her</a>
     </li>
-
-
 
     <li style="float:right"><a href="login.html" th:href="@{/login}" class="active">Login</a></li>
 
-    <li  style="float:right" class="dropdown" th:if="${session.currentUser != null}">
+    <li style="float:right" class="dropdown" th:if="${session.currentUser != null}">
         <a th:text="${session.currentUser.mail}" class="dropbtn"></a>
         <div class="dropdown-content">
             <a href="login.html" th:href="@{/logout}">Logout</a>
@@ -35,34 +34,64 @@
 
 <div class="container">
 
-    <div class="info-pic">
-        <img alt="Kirke" src="../public/images/Ols_Kirke_Bornholm.JPG" th:src="@{/images/Ols_Kirke_Bornholm.JPG}" width="350"/>
-    </div>
+<img style="width: 350px; padding: 50px; height: auto; float: right" alt="Kirke" src="../public/images/Ols_Kirke_Bornholm.JPG" th:src="@{/images/Ols_Kirke_Bornholm.JPG}"/>
 
     <div class="info-text">
-     <h2>Lorem Ipsum</h2>
-     <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis leo placerat, scelerisque magna quis, interdum lorem. In facilisis quis est sed commodo. Curabitur vel velit eu mauris faucibus pretium. In commodo eros quis lacinia ultricies. Suspendisse interdum quam convallis metus facilisis, quis fringilla est aliquam. Donec purus quam, porta eleifend lacus vel, vulputate mattis quam. Aenean ornare condimentum tellus a mollis.
-     </p>
-     <p>
-         Vivamus non felis enim. Quisque rhoncus laoreet orci, vel egestas sapien semper et. Pellentesque nec lacinia lacus. Quisque hendrerit, tortor pretium gravida luctus, sem dolor sagittis ipsum, nec sodales tellus tellus ut mi. Fusce tempus imperdiet odio, sed dignissim quam venenatis non. Maecenas pretium, quam vel ultrices fermentum, nunc magna iaculis ex, eget vehicula risus neque ac purus. Aenean ac odio eu sem pharetra tempor sed sed massa. Cras faucibus massa ac arcu bibendum, ultrices dictum eros placerat. Nulla nec eleifend nulla. Suspendisse volutpat justo convallis metus consectetur tincidunt. Integer vulputate, magna ac aliquet tempus, mauris nulla porttitor lectus, a convallis mauris ex sit amet mauris. Proin cursus est enim, a venenatis leo ultricies at.
-     </p>
-     <p>
-         Donec malesuada mi eget libero condimentum, a faucibus dui viverra. Quisque in blandit metus, sit amet pharetra velit. Pellentesque tincidunt nibh vel felis porta tristique. Suspendisse feugiat tincidunt massa, ut posuere urna scelerisque ac. Quisque vel cursus orci, quis dignissim quam. Sed lobortis finibus metus id vestibulum. Sed ac bibendum erat. In hac habitasse platea dictumst. Morbi bibendum lobortis placerat. Etiam et tincidunt lectus. Suspendisse potenti. Suspendisse cursus mauris turpis, eget venenatis urna accumsan vel. Sed ut elit eu metus convallis lacinia eu sit amet lorem. Phasellus in iaculis orci, eget ornare odio.
-     </p>
- </div>
+
+        <h2>Lorem Ipsum</h2>
 
 
-<ul class="cupcakes1">
-    <li><img alt="cupcakePic" src="../public/images/rasberry.png" th:src="@{/images/rasberry.png}"/></li>
-    <li><img alt="cupcakePic" src="../public/images/blueberry.png" th:src="@{/images/blueberry.png}"/></li>
-    <li><img alt="cupcakePic" src="../public/images/chocolate.png" th:src="@{/images/chocolate.png}"/></li>
-</ul>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis leo placerat, scelerisque
+            magna
+            quis, interdum lorem. In facilisis quis est sed commodo. Curabitur vel velit eu mauris faucibus pretium.
+            In
+            commodo eros quis lacinia ultricies. Suspendisse interdum quam convallis metus facilisis, quis fringilla
+            est
+            aliquam. Donec purus quam, porta eleifend lacus vel, vulputate mattis quam. Aenean ornare condimentum
+            tellus
+            a mollis.
+        </p>
+        <p>
+            Vivamus non felis enim. Quisque rhoncus laoreet orci, vel egestas sapien semper et. Pellentesque nec
+            lacinia
+            lacus. Quisque hendrerit, tortor pretium gravida luctus, sem dolor sagittis ipsum, nec sodales tellus
+            tellus
+            ut mi. Fusce tempus imperdiet odio, sed dignissim quam venenatis non. Maecenas pretium, quam vel
+            ultrices
+            fermentum, nunc magna iaculis ex, eget vehicula risus neque ac purus. Aenean ac odio eu sem pharetra
+            tempor
+            sed sed massa. Cras faucibus massa ac arcu bibendum, ultrices dictum eros placerat. Nulla nec eleifend
+            nulla. Suspendisse volutpat justo convallis metus consectetur tincidunt. Integer vulputate, magna ac
+            aliquet
+            tempus, mauris nulla porttitor lectus, a convallis mauris ex sit amet mauris. Proin cursus est enim, a
+            venenatis leo ultricies at.
+        </p>
+        <p>
+            Donec malesuada mi eget libero condimentum, a faucibus dui viverra. Quisque in blandit metus, sit amet
+            pharetra velit. Pellentesque tincidunt nibh vel felis porta tristique. Suspendisse feugiat tincidunt
+            massa,
+            ut posuere urna scelerisque ac. Quisque vel cursus orci, quis dignissim quam. Sed lobortis finibus metus
+            id
+            vestibulum. Sed ac bibendum erat. In hac habitasse platea dictumst. Morbi bibendum lobortis placerat.
+            Etiam
+            et tincidunt lectus. Suspendisse potenti. Suspendisse cursus mauris turpis, eget venenatis urna accumsan
+            vel. Sed ut elit eu metus convallis lacinia eu sit amet lorem. Phasellus in iaculis orci, eget ornare
+            odio.
+        </p>
 
-<ul class="cupcakes2">
-    <li><img alt="cupcakePic" src="../public/images/orange.png" th:src="@{/images/orange.png}"/></li>
-    <li><img alt="cupcakePic" src="../public/images/strawberry.png" th:src="@{/images/strawberry.png}"/></li>
-</ul>
+
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="cupcakes-box">
+        <img alt="cupcakePic1" src="../public/images/rasberry.png" th:src="@{/images/rasberry.png}"/>
+        <img alt="cupcakePic2" src="../public/images/blueberry.png" th:src="@{/images/blueberry.png}"/>
+        <img alt="cupcakePic3" src="../public/images/chocolate.png" th:src="@{/images/chocolate.png}"/>
+        <img alt="cupcakePic4" src="../public/images/orange.png" th:src="@{/images/orange.png}"/>
+        <img alt="cupcakePic5" src="../public/images/strawberry.png" th:src="@{/images/strawberry.png}"/>
+    </div>
 
 </div>
 
