--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,10 +14,13 @@
 </div>
 <ul>
     <li><a href="index.html" th:href="@{/}">Hjem</a></li>
-    <li th:action="${session.currentUser != null} ? '/order' : '/login'" method="GET">
-        <a href="order.html" th:href="@{/order}">Bestil her</a>
-    </li>
 
+    <li th:if="${session.currentUser != null}">
+        <a th:href="@{/order}">Bestil her</a>
+    </li>
+    <li th:unless="${session.currentUser != null}">
+        <a th:href="@{/login}">Bestil her</a>
+    </li>
 
     <li style="float:right"><a href="login.html" th:href="@{/login}" class="active">Login</a></li>
 
