password i html er type password

--- a/src/main/resources/templates/createuser.html
+++ b/src/main/resources/templates/createuser.html
@@ -42,9 +42,9 @@
 
         <input type="text" name="mail" placeholder="Enter your mail">
         <br>
-        <input type="text" name="password1" placeholder="Enter you password" autocomplete="off">
+        <input type="password" name="password1" placeholder="Enter you password" autocomplete="off">
         <br>
-        <input type="text" name="password2" placeholder="Enter you password again" autocomplete="off">
+        <input type="password" name="password2" placeholder="Enter you password again" autocomplete="off">
         <br>
 
         <div><p th:text="${message}"></p></div>
