--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
 <form method="post">
 
     <input type="text" name="mail" placeholder="Enter your mail">
-    <input type="text" name="password" placeholder="Enter you password" autocomplete="off">
+    <input type="password" name="password" placeholder="Enter you password" autocomplete="off">
     <br>
 
     <button type="submit" formaction="/login">Get access to paradise</button>
