Changed some color stuff in styles.css
Added orders to admin.html
(Right now it can only see all orders, not who it is from)

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -48,6 +48,23 @@
         </tr>
         </tbody>
     </table>
+
+
+    <table class="task-table">
+        <thead>
+        <tr>
+            <th>Orders</th>
+        </tr>
+        </thead>
+
+        <tr th:each="order : ${orders}">
+            <td>
+                <a th:href="@{/orderDetails(orderId=${order.orderID})}"
+                   th:text="'Order #' + ${order.orderID} + ' - ' + ${#temporals.format(order.date, 'dd/MM/yyyy')}"></a>
+            </td>
+        </tr>
+    </table>
+
 </div>
 </body>
 </html>
